--- a/config/database.yml
+++ b/config/database.yml
@@ -20,6 +20,5 @@ test:
 
 production:
   adapter: sqlite3
-  database: db/production.sqlite3
-  pool: 5
-  timeout: 5000
+  encoding: unicode
+  database: amicale_version2_production
